# EdgeDeploy-Inference

./: .gitignore  README.md
benchmark/: benchmark_suite.py  run_benchmarks.sh
cpp/: CMakeLists.txt
cpp/include/: asr_engine.h  qnn_configs.h
cpp/src/: asr_engine.cpp  jni_bridge.cpp
dotnet-examples/: sherpa-onnx.sln
dotnet-examples/kitten-tts/: Program.cs  kitten-tts.csproj
dotnet-examples/kitten-tts-play/: Program.cs  kitten-tts-play.csproj
dotnet-examples/kokoro-tts/: Program.cs
dotnet-examples/kokoro-tts-play/: Program.cs
dotnet-examples/non-streaming-canary-decode-files/: Program.cs  non-streaming-canary-decode-files.csproj
dotnet-examples/non-streaming-funasr-nano-decode-files/: Program.cs  non-streaming-funasr-nano-decode-files.csproj
dotnet-examples/non-streaming-moonshine-v2-decode-files/: Program.cs  non-streaming-moonshine-v2-decode-files.csproj
dotnet-examples/non-streaming-qwen3-asr-decode-files/: Program.cs
dotnet-examples/offline-audio-tagging/: Program.cs  offline-audio-tagging.csproj
dotnet-examples/offline-decode-files/: Program.cs  offline-decode-files.csproj
dotnet-examples/offline-tts/: Program.cs  offline-tts.csproj
dotnet-examples/offline-tts-play/: Program.cs  offline-tts-play.csproj
dotnet-examples/online-decode-files/: Program.cs
dotnet-examples/pocket-tts-zero-shot/: Program.cs  pocket-tts-zero-shot.csproj
dotnet-examples/pocket-tts-zero-shot-play/: Program.cs  pocket-tts-zero-shot-play.csproj
dotnet-examples/speech-enhancement-gtcrn/: Program.cs
scripts/: qat_calibration.py  trt_optimizer.py
(+12 files in other folders)
